# azchar

./: .gitignore  .travis.yml  Cargo.toml  README.md  azchar.sh  commandlist.md
azchar-config/: Cargo.toml
azchar-config/src/: lib.rs
azchar-database/: Cargo.toml
azchar-database/migrations_main/0000_characters/: up.sql
azchar-database/migrations_root_db/0000_root_db/: up.sql
azchar-database/src/: lib.rs
azchar-database/src/character/: attribute.rs  character.rs  image.rs  mod.rs  note.rs
azchar-database/src/root_db/: characters.rs  mod.rs  system.rs  system_config.rs  tests.rs
azchar-database/src/shared/: mod.rs
azchar-error/: Cargo.toml
azchar-expclient/: Cargo.toml
azchar-expclient/src/: main.rs
azchar-server/: Cargo.toml
azchar-server/examples/: dnd5e_minimal_sheet.json
azchar-server/src/: lib.rs  main.rs  main_loop.rs  requests.rs  websocket_loop.rs
azchar-server/src/roundtrip_tests/: mod.rs  test_library.rs
examples/: cj-fusion.toml  cjfusion.toml  dnd5e.toml  dnd5e0.toml  dnd5e_minimal_sheet.json  example.toml  example_char.db  example_char_list.db  example_client.html  min_dnd_sheet.json
fourth/: Cargo.toml  build.rs
fourth/src/: index.html  main.rs  tauri.conf.json
fourth/src/file_dialog/: mod.rs
fourth/src/flow_control/: connection.rs  dice_dialog.rs  error_dialog.rs  export.rs  images.rs  import.rs  mod.rs  table.rs
fourth/src/flow_control/tables/: main.rs  mod.rs  notes.rs  parts.rs  resource.rs  skill.rs
fourth/src/flow_control/tables/parts/: attr_option.rs  mod.rs  part.rs  part_option.rs  parts.rs
fourth/src/main_dialog/: connection.rs  dice_dialog.rs  error_dialog.rs  export.rs  images.rs  import.rs  mod.rs
fourth/src/main_dialog/tables/: main.rs  notes.rs  resource.rs  skill.rs
fourth/src/main_dialog/tables/parts/: attr_option.rs  part.rs  part_option.rs
fourth/src/styles/: mod.rs
migrations_main/: 0000_characters.sql
migrations_main/0000_characters/: up.sql
migrations_root_db/: 0000_root_db.sql
migrations_root_db/0000_root_db/: up.sql
src/: main.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/character/: attribute.rs  character.rs  mod.rs
src/database/root_db/: characters.rs  mod.rs  system.rs  system_config.rs  tests.rs
src/database/shared/: mod.rs
src/error/: mod.rs
src/roller/: mod.rs
src/server/: main_loop.rs  mod.rs  requests.rs
third/: electron-builder.json  package-lock.json  package.json
third/src/: index.html  main.js  preload-bp.js  preload.js  renderer.js  set-listeners.js  styles.css
third/src/azchar-backend/: flow-control.js  help-text.js  request-reply.js  socket-mod.js
third/src/preload/: constants.js  mod.js  set-elements-bp.js  set-elements.js  set-listeners.js
