[package]
name = "azchar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "azchar"
path = "azchar-server/src/main.rs"

[[bin]]
name = "azchar-fourth"
path = "fourth/src/main.rs"

[workspace]
members = [
  "azchar-config",
  "azchar-database",
  "azchar-error",
  "azchar-server",
  "azchar-expclient",
  "fourth"
]

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = { version = "0.18", features = ["image"] }
fnv = "*"
image = "0.24"
rfd = "0.10" # rusty file dialog.
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
toml = "0.5"

azchar-config = { path = "azchar-config" }
azchar-database = { path = "azchar-database" }
azchar-error = { path = "azchar-error" }
azchar-server = { path = "azchar-server" }

[dependencies.libazdice]
git = "https://github.com/aleshaleksey/libazdice.git"
version = "0.2.5"

[dependencies.websocket]
version = "0.26.0"
features = ["sync"]
default-features = false

[profile.dev]
opt-level = 2
lto = false

[profile.release]
opt-level = 3
lto = true
