[package]
name = "azchar-database"
version = "0.1.0"
edition = "2018"

[dependencies]
fnv = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
toml = "0.5"
uuid-rs = { version = "*", features = ["random"] }

azchar-error = { path = "../azchar-error" }
azchar-config = { path = "../azchar-config" }

[dependencies.rusqlite]
version = "0.26.3"
features = ["modern-full"]
# features = ["with-deprecated", "32-column-tables", "sqlite"]
