[package]
name = "azchar-server"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
toml = "0.5"
websocket = "0.24"
azchar-config = { path = "../azchar-config" }
azchar-database = { path = "../azchar-database" }
azchar-error = { path = "../azchar-error" }

[dependencies.libazdice]
git = "https://github.com/aleshaleksey/libazdice.git"
version = "0.2.5"
