[package]
name = "azchar-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "0.5"
azchar-config = { path = "../azchar-config" }
azchar-database = { path = "../azchar-database" }
azchar-error = { path = "../azchar-error" }

[dependencies.libazdice]
git = "https://github.com/aleshaleksey/libazdice.git"
version = "0.2.5"

[dependencies.websocket]
version = "0.26.0"
features = ["sync"]
default-features = false
optional = true

[dev-dependencies]
tempfile = "*"

[features]
default = ["websocket"]
fourth = []
