[package]
name = "azchar-fourth"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
tauri = "1.0.5"
tempfile = "*"
toml = "0.5"
azchar-config = { path = "../azchar-config" }
azchar-database = { path = "../azchar-database" }
azchar-error = { path = "../azchar-error" }
azchar-server = { path = "../azchar-server", features = ["fourth"] }

[dependencies.libazdice]
git = "https://github.com/aleshaleksey/libazdice.git"
version = "0.2.5"
