[package]
name = "azchar-fourth"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = { version = "0.18", features = ["image"] }
fnv = "*"
image = "0.24"
serde = "*"
serde_derive = "*"
serde_json = "*"
tempfile = "*"
toml = "0.5"

azchar-config = { path = "../azchar-config" }
azchar-database = { path = "../azchar-database" }
azchar-error = { path = "../azchar-error" }
azchar-server = { path = "../azchar-server", features = ["fourth"] }

[dependencies.libazdice]
git = "https://github.com/aleshaleksey/libazdice.git"
version = "0.2.5"
